# fremont

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  seed.py
.github/workflows/: ci.yml
src/: cli.py  index_advisor.py  mongo_client.py
src/fremont/: __init__.py  analyzer.py  config.py  index_advisor.py  json_tools.py  reporting.py
tests/: test_index_advisor.py
